# sap-proxy-v3

./: .gitignore  DEV-NOTES.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  srv.service
app/: config.py  curl_login.py  main.py  model_registry.py  openai_api.py
tests/: test_config.py  test_curl_completion.py  test_curl_login.py  test_curl_metadata.py  test_health.py  test_openai_api.py
