[project]
name = "sap-proxy-v3"
version = "3.0.0"
description = "OpenAI-compatible SAP AI Launchpad proxy (v3 — Anthropic layer removed)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "httpx>=0.27,<1.0",
  "curl_cffi>=0.7,<1.0",
  "beautifulsoup4>=4.12,<5.0",
  "pydantic>=2.8,<3.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "respx>=0.21,<1.0",
]
playwright = [
  "playwright>=1.50,<2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]
